--- a/src/app/components/delivery/delivery.component.html
+++ b/src/app/components/delivery/delivery.component.html
@@ -16,10 +16,11 @@
                 <div class="card">
                     <div class="card-body">
                         <!-- <a href="" id="show" class="btn  btn-maron" style="float: right">Export To Excel</a> -->
-                        <a routerLink="/addDelivery" id="show" class="btn  btn-maron" style="float: right">Add Delivery Boy</a>
+                        <a routerLink="/addDelivery" id="show" class="btn  btn-maron" style="float: right">Add Delivery
+                            Boy</a>
                         <h4 class="card-title">
                             Delivery guys </h4>
-                        <br/>
+                        <br />
                         <div class="row">
                             <div class="col-12">
                                 <div class="table-responsive">
