--- a/src/app/components/delivery/add.delivery.html
+++ b/src/app/components/delivery/add.delivery.html
@@ -23,30 +23,35 @@
                                     <fieldset>
                                         <div class="form-group">
                                             <label for="firstname">Name</label>
-                                            <input id="category" class="form-control" name="category" type="text" [(ngModel)]="contact" />
+                                            <input id="category" class="form-control" name="category" type="text"
+                                                [(ngModel)]="contact" />
                                         </div>
                                         <div class="form-group">
                                             <label for="firstname">Emai</label>
-                                            <input id="category" class="form-control" name="category" type="text" [(ngModel)]="email" />
+                                            <input id="category" class="form-control" name="category" type="text"
+                                                [(ngModel)]="email" />
                                         </div>
                                         <div class="form-group">
                                             <label for="firstname">Password</label>
-                                            <input type="password" id="category" class="form-control" name="category" type="text" [(ngModel)]="password" />
+                                            <input type="password" id="category" class="form-control" name="category"
+                                                type="text" [(ngModel)]="password" />
                                         </div>
                                         <div class="form-group">
                                             <label for="firstname">Phone</label>
-                                            <input id="category" class="form-control" name="category" type="text" [(ngModel)]="phone" />
+                                            <input id="category" class="form-control" name="category" type="text"
+                                                [(ngModel)]="phone" />
                                         </div>
                                         <div class="form-group">
                                             <label for="exampleInputEmail1">Id Proof</label>
                                             <input class="form-control" type="file" accept="image/*" (change)="changeListener($event)">
+                                            <br>
                                             <div *ngIf="image">
                                                 <h4>Image:</h4>
                                                 <img src="{{image}}" alt="" width="200" height="200">
                                             </div>
                                         </div>
                                         <br>
-                                        <button type="submit" class="btn btn-primary vendor-button" (click)="addVendor()">
+                                        <button type="submit" class="btn btn-primary vendor-button" (click)="addDelivory()">
                                             Add
                                         </button>
                                     </fieldset>
