--- a/src/app/components/products/products.component.css
+++ b/src/app/components/products/products.component.css
@@ -62,3 +62,20 @@ strong{
 .form-inline .form-control{
     margin-right: 20px;  
 }
+::placeholder{
+    color: black;
+}
+.checkbox-inline{
+    margin-bottom: 0px !important;
+}
+.margin{
+    margin-left: 20px;
+}
+.checkbox-inline input{
+    margin-right: 10px;
+}
+.form-group label{
+    font-size: 16px;
+    line-height: 2;
+}
+
