--- a/src/app/components/products/add.product.html
+++ b/src/app/components/products/add.product.html
@@ -85,8 +85,8 @@
                                             <select class="form-control border-primary" id="sel1" (change)="changeDiscountOpt($event.target.value)">
                                                 <i class="fa fa-chevron-down" aria-hidden="true"></i>
                                                 <option value="" disabled selected hidden>Select Discount Options</option>
-                                                <option value="1">Rupees</option>
-                                                <option value="2">Percentage</option>
+                                                <option value="Rupees">Rupees</option>
+                                                <option value="Percentage">Percentage</option>
                                             </select>
                                         </div>
                                         <div class="form-group" *ngIf="amount">
@@ -101,7 +101,7 @@
                                         <div class="form-group">
                                             <h6>Select Delivery Options</h6>
                                             <div class="margin" *ngFor="let item of list">
-                                                <label class="checkbox-inline"><input type="checkbox" [value]="item.title"
+                                                <label class="checkbox-inline"><input type="checkbox" name="item" [value]="item.title"
                                                         [(ngModel)]="item.checked" (click)="checkbox($event.target.value)">{{item.title}}</label>
                                             </div>
                                         </div>
