--- a/src/app/components/sidenav/profile.nav.html
+++ b/src/app/components/sidenav/profile.nav.html
@@ -56,6 +56,12 @@
                 <span class="menu-title">Delivery Handling</span>
             </a>
         </li>
+        <li class="nav-item" [ngClass]="{'active':pageNav==='content' || pageNav==='addcontent'}">
+            <a class="nav-link" routerLink="/content-management">
+                <i class="fa fa-file-text"></i>
+                <span class="menu-title">Content Management</span>
+            </a>
+        </li>
         <!-- <li class="nav-item" [ngClass]="{'active':pageNav==='users' || pageNav==='addusers'}">
             <a class="nav-link" routerLink="/users">
                 <i class="icon-people menu-icon"></i>
